@@ -5,6 +5,8 @@ Version 5.0.10 -
     a non-existant pool.  (bug #36432)
   - Fixed problem where supplying the connection reset config option can cause login to fail
     when there is room to make a new connection and the pool has no idle connections.    
+  - Fixed MySqlConnectionStringBuilder to first remove old keyword settings when setting
+    a value that was previously set (bug #37955)    
     
 Version 5.0.9 - 4/14/08
 
